# SSP

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.c  out.pcm
cmake/: rules.cmake  toolchain_asr.cmake  toolchain_kws.cmake
example_riscv_linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example
example_x86_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example
mini_log/: m_log.c  m_log.h
python_script/: 8s_input.pcm  8s_ref.pcm  wav_to_pcm.py
src_demo/adapt_lms&rls/: adapt_filt  adapt_filt.cpp  adapt_filt.h  lms.raw  main.cpp  rls.raw
src_demo/adapt_overlap_save/: baselib.h  conv.cpp  main.cpp
src_demo/aec/: 130_lpb_ref.pcm  130_mic.pcm  130_out.pcm  150_lpb_ref.pcm  150_mic.pcm  150_out.pcm
src_demo/aec/src/: aec_test  dios_ssp_aec_api.c  dios_ssp_aec_firfilter.c  dios_ssp_api.c  dios_ssp_share_subband.c  dios_ssp_tde.c  main.c
